--- a/package.json
+++ b/package.json
@@ -14,8 +14,17 @@
   "dependencies": {
     "@prisma/client": "^2.17.0",
     "apollo-server": "^2.21.0",
+    "apollo-server-express": "^2.21.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
-    "nexus": "^1.0.0"
+    "helmet": "^4.4.1",
+    "http-status": "^1.5.0",
+    "nexus": "^1.0.0",
+    "passport": "^0.4.1",
+    "uuid": "^8.3.2",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "prisma": "^2.17.0",
