--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only --no-notify api/app.ts",
+    "dev": "cross-env NODE_ENV=development ts-node-dev --transpile-only --no-notify api/app.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -17,10 +17,13 @@
     "apollo-server-express": "^2.21.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "helmet": "^4.4.1",
     "http-status": "^1.5.0",
+    "joi": "^17.4.0",
     "nexus": "^1.0.0",
     "passport": "^0.4.1",
     "uuid": "^8.3.2",
